--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 
   </head>
   <body>
-    <div id="top">
+    /*<div id="top">
       <div class="top-left">
         <label style="overflow: auto;" for="image">
           图片地址(允许跨域):<a href="https://developer.mozilla.org/zh-CN/docs/Web/HTTP/CORS" target="scratch-image">跨域设置参考</a>
@@ -64,15 +64,15 @@
         <canvas style="width: 100px; height: 100px;" onclick="openQr()" id="qr"></canvas>
         <div><a style="font-size: 18px;" href="https://github.com/ckvv/scratch-image">GitHub</a></div>
       </div>
-    </div>
+    </div>*/
     <div id="center">
+		<h2 class="mobile">从空白处划向圆球</h2>
       <div id="cont">
         <noscript>
           Your browser does not support JavaScript or it is disabled.<br>
           JavaScript is needed to view this site.
         </noscript>
-        <div id="dots"></div>
-        <h2 class="mobile">从空白处划向圆球</h2>
+        <div id="dots"></div>       
       </div>
     </div>
     <script>
@@ -375,7 +375,7 @@
           }
 
           async function basicLoad(location) {
-            location = location || 'panda.png';
+            location = location || 'zdd.jpg';
             let imgBase64;
             try {
               imgBase64 = await imageToBase64(location);
