--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="default">
     <meta name="google" content="notranslate">
-    <title>scratch image</title>
+    <title>serendipity ymm</title>
     <script type="text/javascript">var version = '1.9.6';</script>
     <script type="text/javascript" src="polyfill/polyfill.js?1.9.6"></script>
     <script type="text/javascript" src="polyfill/Blob.js?1.9.6"></script>
@@ -65,7 +65,7 @@
         <div><a style="font-size: 18px;" href="https://github.com/ckvv/scratch-image">GitHub</a></div>
       </div>
     </div>-->
-	<h2 class="mobile">从空白处划向圆球</h2>
+	<h2 class="mobile">刮刮乐 ^_^</h2>
     <div id="center">
       <div id="cont">	      
         <noscript>
