--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="default">
     <meta name="google" content="notranslate">
-    <title>serendipity ymm</title>
+    <title>serendipity girl</title>
     <script type="text/javascript">var version = '1.9.6';</script>
     <script type="text/javascript" src="polyfill/polyfill.js?1.9.6"></script>
     <script type="text/javascript" src="polyfill/Blob.js?1.9.6"></script>
@@ -375,7 +375,7 @@
           }
 
           async function basicLoad(location) {
-            location = location || 'ymm.jpg';
+            location = location || 'dyl.jpg';
             let imgBase64;
             try {
               imgBase64 = await imageToBase64(location);
