--- a/index.html
+++ b/index.html
@@ -375,7 +375,7 @@
           }
 
           async function basicLoad(location) {
-            location = location || 'dyl.jpg';
+            location = location || 'dyl01.jpg';
             let imgBase64;
             try {
               imgBase64 = await imageToBase64(location);
