--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
         <div><a style="font-size: 18px;" href="https://github.com/ckvv/scratch-image">GitHub</a></div>
       </div>
     </div>-->
-	<h2 class="mobile">刮刮乐 ^_^</h2>
+	<h2 class="mobile">happy day</h2>
     <div id="center">
       <div id="cont">	      
         <noscript>
